# atletiek-nu-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
api/: Cargo.toml
api-cfworker/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
api-cfworker/src/: lib.rs
api/src/: get_registrations.rs  get_results.rs  main.rs  route.rs  search_competitions.rs  util.rs
api/src/cache/: mod.rs  serialize_instant.rs  test.rs
atletiek-nu-api/: Cargo.toml
atletiek-nu-api/benches/: scraping.rs
atletiek-nu-api/src/: lib.rs  traits.rs  util.rs
atletiek-nu-api/src/components/: country.rs  mod.rs  wind_speed.rs
atletiek-nu-api/src/models/: athlete_event_result.rs  athlete_list.rs  athlete_profile.rs  competition_event_list.rs  competition_registrations_list.rs  competitions_list.rs  competitions_list_web.rs  mod.rs  registrations_list.rs  registrations_list_web.rs
atletiek-nu-api/src/tests/: mod.rs
gui/: Cargo.toml
gui/src/: app.rs  async_resource.rs  main.rs
gui/src/windows/: event_results.rs  mod.rs  registrations.rs  requests.rs  search_athletes.rs  search_competitions.rs
test-cli/: Cargo.toml
test-cli/src/: main.rs
