[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.15"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.atletiek_nu_api]
path = "../atletiek-nu-api"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
