[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.1", features = ["d1"] }
getrandom = { version = "0.2.15", features = ["js"] }
urlencoding = "2.1.3"
console_error_panic_hook = "0.1.7"
git-version = "0.3.9"

[dependencies.atletiek_nu_api]
path = "../atletiek-nu-api"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
