[package]
name = "api"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
dashmap = { version = "5.4.0", features = ["serde"] }
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive", "rc"] }
leaky-bucket = "1.0.1"
self_update = { version = "0.38.0", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "compression-zip-bzip2"] }
anyhow = "1.0.79"
serde_with = "3.4.0"

[dependencies.atletiek_nu_api]
path = "../atletiek-nu-api"

[dependencies.rpr]
git = "https://github.com/zeskeertwee/rpr"
hash = "5a911599a52518f9065c158d808905b288b0b861"