[package]
name = "api"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
dashmap = { version = "6.1.0", features = ["serde"] }
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive", "rc"] }
leaky-bucket = "1.1.2"
self_update = { version = "0.41.0", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "compression-zip-bzip2"] }
anyhow = "1.0.94"

[dependencies.atletiek_nu_api]
path = "../atletiek-nu-api"

[dependencies.rpr]
git = "https://github.com/zeskeertwee/rpr"
rev = "b8ccee4de37c4d8314265cec862396bd0fa4fc71"
