[package]
name = "atletiek_nu_api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { version = "0.16.0", features = ["deterministic"] }
reqwest = { version = "0.11.16", features = ["blocking"] }
anyhow = "1.0.70"
regex = "1.7.3"
urlencoding = "2.1.2"
lazy_static = "1.4.0"
arc-swap = "1.6.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
log = { version = "0.4.20", features = [] }

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "scraping"
harness = false