[package]
name = "atletiek_nu_api"
version = "0.2.1"
description = "A scraping library for the atletiek.nu website"
readme = "../README.md"
edition = "2021"
authors = ["Jasper Fortuin <zeskeertwee@gmail.com>"]
repository = "https://github.com/zeskeertwee/atletiek-nu-api"
homepage = "https://github.com/zeskeertwee/atletiek-nu-api"
license = "AGPL-3.0-or-later"
categories = ["api-bindings"]
keywords = ["scraping", "api", "athletics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { version = "0.16.0", features = ["deterministic"] }
reqwest = { version = "0.11.16", features = ["blocking"] }
anyhow = "1.0.70"
regex = "1.7.3"
urlencoding = "2.1.2"
lazy_static = "1.4.0"
arc-swap = "1.6.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
log = { version = "0.4.20", features = [] }
rand = "0.8.5"
git-version = "0.3.9"

[dev-dependencies]
criterion = { version = "0.5.1" }
tokio = { version = "1.32.0", features = ["test-util", "rt-multi-thread", "macros"] }

[[bench]]
name = "scraping"
harness = false
