[package]
name = "atletiek_nu_api"
version = "0.2.4"
description = "A scraping library for the atletiek.nu website"
readme = "../README.md"
edition = "2021"
authors = ["Jasper Fortuin <zeskeertwee@gmail.com>"]
repository = "https://github.com/zeskeertwee/atletiek-nu-api"
homepage = "https://github.com/zeskeertwee/atletiek-nu-api"
license = "AGPL-3.0-or-later"
categories = ["api-bindings"]
keywords = ["scraping", "api", "athletics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { version = "0.16.0", features = ["deterministic"] }
reqwest = { version = "0.11.27", features = ["blocking"] }
anyhow = "1.0.94"
regex = "1.11.1"
urlencoding = "2.1.3"
arc-swap = "1.7.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
log = { version = "0.4.22", features = [] }
rand = "0.8.5"
git-version = "0.3.9"

[dev-dependencies]
criterion = { version = "0.5.1" }
tokio = { version = "1.42.0", features = ["test-util", "rt-multi-thread", "macros"] }

[[bench]]
name = "scraping"
harness = false
