[package]
name = "test-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atletiek_nu_api = { path = "../atletiek-nu-api" }
tokio = { version = "1.35.1", features = ["macros"] }
pretty_env_logger = "0.5.0"